...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="28"/>
                                        <state key="normal" title="Write">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="28"/>
                                        <state key="normal" title="Monitor">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="28"/>
                                        <state key="normal" title="History">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="28"/>
                                        <state key="normal" title="Preferences">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <rect key="frame" x="16" y="78" width="343" height="540"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="daily_text"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="21"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Date" id="sJ5-Cm-C39">
                        <barButtonItem key="leftBarButtonItem" title="Home" id="u1F-kN-OBU">
                            <connections>
                                <segue destination="Q7n-CA-tEc" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="f3n-Im-IX9"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Functionality" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDP-Rc-8gh">
                                                <rect key="frame" x="22" y="206.5" width="103" height="20"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
        <scene sceneID="85F-H2-ZTf">
            <objects>
                <viewController id="Ujw-vj-rQD" userLabel="Progress" customClass="ProgressViewController" customModule="healthTexter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="C7O-tt-wfZ"/>
...
                                <segments>
                                    <segment title="Last week"/>
                                    <segment title="Last month"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <segments>
                                    <segment title="Pain"/>
                                    <segment title="Sleep"/>
                                    <segment title="Functionality"/>
                                    <segment title="Progress"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Share today's entry" id="wLx-F4-UXG">
                        <barButtonItem key="leftBarButtonItem" title="Home" id="raA-ge-gUb">
                            <connections>
...
