...
        Entry.getStoredEntries(vc: self, frc: fetchedResultsController)
    }
    
    func configureUI(){
        Theme.navigationBar(vc: self, backgroundColor: Theme.historyColor)
        self.navigationItem.leftBarButtonItem = self.editButtonItem
        self.navigationItem.leftBarButtonItem?.title = "Select"
        self.tableView.allowsMultipleSelectionDuringEditing = true
        self.tableView.reloadData()
    }
    
    // MARK: - Segues
    
...
            
        } else {
            
            // Switch to editing mode
            self.tableView.setEditing(true, animated: true)
            self.tableView.isEditing = true
            self.editButtonItem.title = "Done"
        }
    }
}

